# Copyright 2017 H2O.ai; Apache License Version 2.0
[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
#
# E241: (Multiple spaces after ':' or ',') Occasionally aligning code fragments vertically improves readability
# E265: (Block comment should start with '# ') We have banner comments of the form #---------------------
# E302: (Functions should be separated with 2 blank lines) PEP8 says that sometimes groups of related functions may be
#       separated with 3 lines to improve readability. We do that.
# E303: (Classes should be separated with ? blank lines) "Sparce is better than dense". Extra separators don't hurt.
# E701: (Multiple statements on the same line) PEP8 allows multiple statements on the same line in certain situations,
#       for example `if foo: continue` is more readable in 1 line than in 2.
#
# D105: (Missing docstring in magic method) Magic methods have well-defined meaning, docstrings are redundant.
# D202: (No blank lines allowed after function docstring). Sometimes a blank line is necessary for readability: if the
#       method is long and contains multiple "sections" with headers; or if the function defines another function
#       inside itself...
#
ignore = E241,E265,E302,E303,E701,D105,D202
max-line-length = 80
import-order-style = smarkets
inline-quotes = "

[tool:pytest]
minversion = 3.0
norecursedirs = docs .cache .git
